--- a/app/src/main/res/drawable/button_states_1.xml
+++ b/app/src/main/res/drawable/button_states_1.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="false"> 
         <shape android:shape="rectangle">
         <corners android:radius="1000dp" />
-        <solid android:color="#AFCA59" />
+        <solid android:color="#36C7B4" />
         <stroke
             android:width="2dip"
             android:color="#040404" />
