--- a/app/src/main/res/layout/activity_lettre.xml
+++ b/app/src/main/res/layout/activity_lettre.xml
@@ -6,16 +6,186 @@
     android:layout_height="match_parent"
     tools:context=".lettreActivity">
 
+
+
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonback"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/Retour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="HardcodedText,MissingConstraints" />
+        tools:ignore="HardcodedText,MissingConstraints"
+        />
 
+    <Button
+        android:id="@+id/button_a"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="180dp"
+        android:background="@drawable/button_states_1"
+        android:text="a"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_e"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="448dp"
+        android:background="@drawable/button_states_1"
+        android:text="e"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_f"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="292dp"
+        android:layout_marginTop="164dp"
+        android:background="@drawable/button_states_1"
+        android:text="f"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_h"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="308dp"
+        android:layout_marginTop="280dp"
+        android:background="@drawable/button_states_1"
+        android:text="h"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_i"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="596dp"
+        android:background="@drawable/button_states_1"
+        android:text="i"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_k"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="308dp"
+        android:layout_marginTop="548dp"
+        android:background="@drawable/button_states_1"
+        android:text="k"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_m"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="304dp"
+        android:background="@drawable/button_states_1"
+        android:text="m"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_n"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="224dp"
+        android:layout_marginTop="56dp"
+        android:background="@drawable/button_states_1"
+        android:text="n"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_o"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="56dp"
+        android:background="@drawable/button_states_1"
+        android:text="o"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_p"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="192dp"
+        android:layout_marginTop="448dp"
+        android:background="@drawable/button_states_1"
+        android:text="p"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_r"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="188dp"
+        android:layout_marginTop="228dp"
+        android:background="@drawable/button_states_1"
+        android:text="r"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_t"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="292dp"
+        android:layout_marginTop="400dp"
+        android:background="@drawable/button_states_1"
+        android:text="t"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_u"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="548dp"
+        android:background="@drawable/button_states_1"
+        android:text="u"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/button_v"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="188dp"
+        android:layout_marginTop="352dp"
+        android:background="@drawable/button_states_1"
+        android:text="v"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
