--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,46 +7,45 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="56dp"
-        android:layout_height="21dp"
-        android:text="@string/menu"
+        android:layout_width="69dp"
+        android:layout_height="23dp"
+        android:text="Kaoha nui"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.737"
+        app:layout_constraintVertical_bias="0.701"
         tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="99dp"
+        android:layout_height="52dp"
         android:layout_marginStart="56dp"
         android:layout_marginTop="104dp"
-        android:text="@string/otheracti"
+        android:text="Te tau numera"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="99dp"
+        android:layout_height="52dp"
         android:layout_marginStart="56dp"
         android:layout_marginTop="215dp"
-        android:text="@string/otheracti"
+        android:text="Te tau reta"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="99dp"
+        android:layout_height="52dp"
         android:layout_marginStart="56dp"
         android:layout_marginTop="341dp"
-        android:text="@string/otheracti"
+        android:text="a peni"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
