--- a/app/src/main/res/layout/activity_numera.xml
+++ b/app/src/main/res/layout/activity_numera.xml
@@ -135,4 +135,16 @@
         tools:ignore="MissingConstraints" />
 
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="17dp"
+        android:text="@string/Retour"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="HardcodedText,MissingConstraints" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
