--- a/app/src/main/res/layout/activity_number.xml
+++ b/app/src/main/res/layout/activity_number.xml
@@ -22,7 +22,7 @@
         android:layout_width="38dp"
         android:layout_height="43dp"
         android:layout_marginBottom="680dp"
-        android:text="@string/x"
+        android:text="x"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="367dp"
         tools:ignore="MissingConstraints" />
