--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="100dp"
         android:layout_height="37dp"
         android:text="@string/kaoha_nui"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="italic"
         android:textColor="@color/red"
         android:textAlignment="center"
@@ -27,7 +27,7 @@
         android:layout_height="102dp"
         android:layout_marginStart="120dp"
         android:layout_marginTop="104dp"
-        android:text="Te tau numera"
+        android:text="@string/te_tau_numera"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
@@ -38,7 +38,7 @@
         android:layout_height="102dp"
         android:layout_marginStart="120dp"
         android:layout_marginTop="232dp"
-        android:text="Te tau reta"
+        android:text="@string/te_tau_reta"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
@@ -49,7 +49,7 @@
         android:layout_height="102dp"
         android:layout_marginStart="120dp"
         android:layout_marginTop="360dp"
-        android:text="a peni"
+        android:text="@string/a_peni"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
@@ -69,8 +69,8 @@
         android:id="@+id/button6"
         android:layout_width="128dp"
         android:layout_height="102dp"
-        android:layout_marginTop="232dp"
-        android:layout_marginEnd="136dp"
+        android:layout_marginTop="356dp"
+        android:layout_marginEnd="140dp"
         android:text="@string/nombrestxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -80,7 +80,7 @@
         android:id="@+id/button7"
         android:layout_width="128dp"
         android:layout_height="102dp"
-        android:layout_marginTop="360dp"
+        android:layout_marginTop="232dp"
         android:layout_marginEnd="136dp"
         android:text="@string/formestxt"
         app:layout_constraintEnd_toEndOf="parent"
